# deploy_kubernetes

./: .gitignore  Dockerfile  README.md  deploy.py  deploy_code.py  house_pricing.py  pyproject.toml  requirements.deploy.txt  requirements.txt
.github/workflows/: CI.yml
kubernetes/: deployment.yaml  nodeport.yaml  service.yaml
models/: house_model.pkl
notebooks/: train.ipynb
